testsuite/tests/grammar/invalid_lkt/annotated_grammar.lkt
@foo grammar foo_grammar {}
